@@ -83,6 +83,16 @@ name|java
 operator|.
 name|net
 operator|.
+name|MalformedURLException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|net
+operator|.
 name|URL
 import|;
 end_import
@@ -164,6 +174,16 @@ operator|.
 name|util
 operator|.
 name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|StringTokenizer
 import|;
 end_import
 
@@ -1074,6 +1094,29 @@ argument_list|(
 literal|"args"
 argument_list|)
 decl_stmt|;
+name|Option
+name|cp
+init|=
+name|OptionBuilder
+operator|.
+name|withArgName
+argument_list|(
+literal|"cp"
+argument_list|)
+operator|.
+name|hasArg
+argument_list|()
+operator|.
+name|withDescription
+argument_list|(
+literal|"extra classpath, used only in combination with option main"
+argument_list|)
+operator|.
+name|create
+argument_list|(
+literal|"cp"
+argument_list|)
+decl_stmt|;
 name|Options
 name|options
 init|=
@@ -1311,6 +1354,13 @@ operator|.
 name|addOption
 argument_list|(
 name|args
+argument_list|)
+expr_stmt|;
+name|options
+operator|.
+name|addOption
+argument_list|(
+name|cp
 argument_list|)
 expr_stmt|;
 return|return
@@ -2164,6 +2214,15 @@ literal|"main"
 argument_list|)
 condition|)
 block|{
+comment|// check if the option cp has been set
+name|List
+name|fileList
+init|=
+name|getExtraClasspathFileList
+argument_list|(
+name|line
+argument_list|)
+decl_stmt|;
 comment|// merge -args and left over args
 name|String
 index|[]
@@ -2280,6 +2339,8 @@ name|md
 argument_list|,
 name|confs
 argument_list|,
+name|fileList
+argument_list|,
 name|line
 operator|.
 name|getOptionValue
@@ -2319,6 +2380,145 @@ name|options
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+specifier|private
+specifier|static
+name|List
+name|getExtraClasspathFileList
+parameter_list|(
+name|CommandLine
+name|line
+parameter_list|)
+block|{
+name|List
+name|fileList
+init|=
+literal|null
+decl_stmt|;
+if|if
+condition|(
+name|line
+operator|.
+name|hasOption
+argument_list|(
+literal|"cp"
+argument_list|)
+condition|)
+block|{
+name|fileList
+operator|=
+operator|new
+name|ArrayList
+argument_list|()
+expr_stmt|;
+name|String
+index|[]
+name|cpArray
+init|=
+name|line
+operator|.
+name|getOptionValues
+argument_list|(
+literal|"cp"
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|int
+name|index
+init|=
+literal|0
+init|;
+name|index
+operator|<
+name|cpArray
+operator|.
+name|length
+condition|;
+name|index
+operator|++
+control|)
+block|{
+name|StringTokenizer
+name|tokenizer
+init|=
+operator|new
+name|StringTokenizer
+argument_list|(
+name|cpArray
+index|[
+name|index
+index|]
+argument_list|,
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"path.separator"
+argument_list|)
+argument_list|)
+decl_stmt|;
+while|while
+condition|(
+name|tokenizer
+operator|.
+name|hasMoreTokens
+argument_list|()
+condition|)
+block|{
+name|String
+name|token
+init|=
+name|tokenizer
+operator|.
+name|nextToken
+argument_list|()
+decl_stmt|;
+name|File
+name|file
+init|=
+operator|new
+name|File
+argument_list|(
+name|token
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|file
+operator|.
+name|exists
+argument_list|()
+condition|)
+block|{
+name|fileList
+operator|.
+name|add
+argument_list|(
+name|file
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|Message
+operator|.
+name|warn
+argument_list|(
+literal|"The extra classpath '"
+operator|+
+name|file
+operator|+
+literal|"' does not exist."
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+block|}
+return|return
+name|fileList
+return|;
 block|}
 specifier|private
 specifier|static
@@ -2952,6 +3152,9 @@ name|String
 index|[]
 name|confs
 parameter_list|,
+name|List
+name|fileList
+parameter_list|,
 name|String
 name|mainclass
 parameter_list|,
@@ -2967,6 +3170,72 @@ operator|new
 name|ArrayList
 argument_list|()
 decl_stmt|;
+comment|// Add option cp (extra classpath) urls
+if|if
+condition|(
+name|fileList
+operator|!=
+literal|null
+operator|&&
+name|fileList
+operator|.
+name|size
+argument_list|()
+operator|>
+literal|0
+condition|)
+block|{
+for|for
+control|(
+name|Iterator
+name|iter
+init|=
+name|fileList
+operator|.
+name|iterator
+argument_list|()
+init|;
+name|iter
+operator|.
+name|hasNext
+argument_list|()
+condition|;
+control|)
+block|{
+name|File
+name|file
+init|=
+operator|(
+name|File
+operator|)
+name|iter
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+try|try
+block|{
+name|urls
+operator|.
+name|add
+argument_list|(
+name|file
+operator|.
+name|toURL
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|MalformedURLException
+name|e
+parameter_list|)
+block|{
+comment|// Should not happen, just ignore.
+block|}
+block|}
+block|}
 try|try
 block|{
 name|Collection
